--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,114 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+import pandas as pd
+import matplotlib.pyplot as plt
+df=pd.read_csv("C:/Users/Admin/Downloads/archive (5)/Alphabet Stock.csV")
+print(df)
+
+start_date=pd.to_datetime('2020-6-1')
+end_date=pd.to_datetime('2020-09-30')
+df['Date']=pd.to_datetime(df['Date'])
+new_df=(df['Date']>=start_date) & (df['Date']<=end_date)
+new_df
+
+df1=df.loc[new_df]
+df1
+
+df2=df1.set_index('Date')
+df2
+
+plt.figure(figsize=(5,5))
+plt.suptitle('Stock price of Alphabet Inc.,\n01-06-2020 to 30-09-2020',\
+             fontsize=18,color='black')
+plt.xlabel("Date",fontsize=16,color='black')
+plt.ylabel("$ price",fontsize=16,color='black')
+df2['Close'].plot(color='green')
+plt.show()
+
+df['Date'] = pd.to_datetime(df['Date'])
+plt.figure(figsize=(10,10))
+df.plot(x='Date', y=['Open', 'Close']);
+plt.suptitle('Opening/Closing Stock price of Alphabet Inc.,\n 01-04-2020 to 30-09-2020', fontsize=12, color='black')
+plt.xlabel("Date", fontsize=12, color='black')
+plt.ylabel("$ price", fontsize=12, color='black')
+plt.show()
+
+df=pd.read_csv("C:/Users/Admin/Downloads/archive (5)/Alphabet Stock.csV")
+start_date = pd.to_datetime('2020-4-1')
+end_date = pd.to_datetime('2020-4-30')
+df['Date'] = pd.to_datetime(df['Date'])
+new_df = (df['Date']>=start_date) & (df['Date']>=end_date)
+
+df1 = df.loc[new_df]
+df2 = df1.set_index('Date')
+
+plt.figure(figsize=(6,6))
+plt.suptitle('Trading Volume of Alphabet Inc. Stock,\n 01-04-2020 to 30-04-2020', fontsize=16, color='black')
+plt.xlabel("Date",fontsize=12, color='black')
+plt.ylabel("Trading Volume", fontsize=12, color='black')
+df2['Volume'].plot(kind='bar');
+plt.show()
+
+import pandas as pd
+import matplotlib.pyplot as plt
+df=pd.read_csv("C:/Users/Admin/Downloads/archive (5)/Alphabet Stock.csv")
+start_date = pd.to_datetime('2020-4-1')
+end_date = pd.to_datetime('2020-4-20')
+df['Date'] = pd.to_datetime(df['Date'])
+new_df =  (df['Date']>= start_date) &  (df['Date']<=end_date)
+df1=df.loc[new_df]
+df2=df1[['Date','Open','Close']]
+df3=df2.set_index('Date')
+plt.figure(figsize=(20,20))
+df3.plot.bar();
+plt.suptitle('Opening/Closeing Stock price Alphabet Inc.,\n01-04-2020 to 20-04-2020',fontsize=12,color='black')
+plt.show()
+
+import pandas as pd
+import matplotlib.pyplot as plt
+df=pd.read_csv("C:/Users/Admin/Downloads/archive (5)/Alphabet Stock.csV")
+start_date=pd.to_datetime('2020-4-1')
+end_date=pd.to_datetime('2020-4-30')
+df['Date']=pd.to_datetime(df['Date'])
+new_df=(df['Date']>= start_date) & (df['Date']<=end_date)
+df1=df.loc[new_df]
+df2=df1[['Date','Open','Close']]
+df3=df2.set_index('Date')
+plt.figure(figsize=(20,20))
+df3.plot.bar(stacked = True);
+plt.suptitle('Opening/Closing Stock prices Alphabet Inc.,\n01-04-2020 to 30-04-2020',fontsize=12,color='black')
+plt.show()
+
+df3.plot.barh(stacked=True);
+
+import pandas as pd
+import matplotlib.pyplot as plt
+df=pd.read_csv("C:/Users/Admin/Downloads/archive (5)/Alphabet Stock.csv")
+start_date=pd.to_datetime('2020-4-1')
+end_date=pd.to_datetime('2020-9-30')
+df['Date']=pd.to_datetime(df['Date'])
+new_df=(df['Date']>=start_date) & (df['Date']<=end_date)
+df1=df.loc[new_df]
+df2=df1.set_index('Date')
+plt.figure(figsize=[15,10])
+df2.plot.scatter('Close','Volume')
+plt.grid(True)
+plt.title('Trading Vloume/price of Alphabet Inc.Stock,\n01-4-2020 to 30-09-2020',fontsize=14,color='black')
+plt.xlabel("Stock price",fontsize=12,color='black')
+plt.ylabel("Trading Voume",fontsize=12 , color='black')
+plt.show()
+
+df=pd.read_csv("C:/Users/Admin/Downloads/archive (5)/Alphabet Stock.csv")
+start_date=pd.to_datetime('2020-4-1')
+end_date=pd.to_datetime('2020-9-30')
+df['Date']=pd.to_datetime(df['Date'])
+new_df=(df['Date']>=start_date)&(df['Date']<=end_date)
+df1=df.loc[new_df]
+df2=df1[['Date','Adj Close']]
+df3=df2.set_index('Date')
+print(df3)
+daily_changes=df3.pct_change(periods=1)
+print(daily_changes)
+daily_changes['Adj Close'].plot(figsize=(10,7),legend=True,linestyle='--',marker='.')
+plt.suptitle('Daily % return of Alphabet Inc.Stock price,\n01-04-2020 to 30-09-2020',fontsize=12,color='black')
+plt.grid(True)
+
+
